--- a/tomato-movie-listing.html
+++ b/tomato-movie-listing.html
@@ -5,13 +5,13 @@
     </div>
     <div class="col-md-2">
         <div>
-            <i class="glyphicon glyphicon-star-empty" >{{movie.rating}}</i>
+            <i class="glyphicon glyphicon-star tomato-rating">{{movie.rating}}</i>
         </div>
         <div class="thumbnail">
             <img ng-src="{{movie.image_url}}" ng-click="tomato.movieClicked(movie)" title="{{movie.description.length > 40 ? ((movie.description | limitTo:40) + '...click image for more') : movie.description}}"/>
         </div>
     </div>
-    <div class="col-md-3" ng-show="movie.show">
+    <div class="col-md-3 tomato-description" ng-show="movie.show">
         {{movie.description}}
     </div>
 </div>
