--- a/tomato-movie-listing.html
+++ b/tomato-movie-listing.html
@@ -1,5 +1,5 @@
 <!-- movie listing functionality -->
-<div class="row" ng-repeat="movie in tomato.firebaseTomato.movies | orderBy:tomato.sortOrder">
+<div class="row" ng-repeat="movie in tomato.filteredMovies | orderBy:tomato.sortOrder">
     <div class="col-lg-12">
         <h3>{{movie.movie_name}} <a class="glyphicon glyphicon-minus-sign tomato-remove" ng-click="tomato.removie(movie.movie_name)"/></h3>
     </div>
